# env

./: .allowed_signers  .git-hook-template  .gitignore  .gitmodules  .pre-commit-config.yaml  .yamllint.yml  CLAUDE.md  LIBREWOLF_NIRI_WORKSPACE_TRACKING.md  LICENSE  README  TMUX_NIRI_WORKSPACE_TRACKING.md  TODO.md  bootstrap.sh  env  env.bash  flake.nix  install-hooks.sh  pyproject.toml  recommended-binaries.list  requirements.txt  self-key.gpg  xonsh.py  xonshrc.py
.claude/skills/init-private-overlay/: SKILL.md
.claude/skills/init-private-overlay/templates/: flake.nix  gitignore  private.nix
aliases/: ga  gap  gbc  gbcma  gbdf  gbpl  gbso  gchbg  gchg  gchp  gclsh  gcma  gcmane  gcn  gcnf  gdcm  gfd  gff  gfu  gg  glog  gm  gmeld  gmm  gmne  gmnff  gpend  gplr  gpsh  gpsht  grcv  grhh  gri  grm  grs  gs  gsh  gshp  gshsh  gshw  (+20 more)
autorun/: amygdalin  neon
config/git/: common  local.template
config/git/hosts/: luc.ritchie
config/git/uname/: Darwin
docs/: windownav-host-keybinds.md
docs/plans/: 2025-11-21-gitconfig-design.md  2025-11-29-unified-niri-window-tracking-design.md  2025-11-29-unified-niri-window-tracking-impl.md  2025-12-05-niri-window-ordering-design.md  2025-12-05-niri-window-ordering-impl.md  2025-12-24-private-config-design.md  2025-12-26-window-position-upsert-design.md  2025-12-26-window-position-upsert-impl.md  2026-01-05-private-dotfiles-design.md  2026-03-07-qmk-flash-design.md  2026-03-07-qmk-flash-impl.md  2026-03-07-windownav-tmux-keybinds-design.md  2026-05-06-uv-tools-declarative-install.md  2026-05-07-secwrap-includes-phase-1-impl.md  2026-05-07-secwrap-includes-phase-2a-impl.md  2026-05-07-secwrap-includes-phase-2b-impl.md  2026-05-07-secwrap-includes-phase-3-impl.md
docs/specs/: 2026-05-06-uv-tools-declarative-install.md  2026-05-07-secwrap-includes-design.md  2026-05-29-catppuccin-macchiato-theme-design.md
dotfiles/: .Xresources  .aerospace.toml  .bash_profile  .bashrc  .i3status.conf  .tmux.conf  .vimrc  .xbindkeysrc  .xinitrc  .xmobarrc  .xonshrc
dotfiles/.claude/: CLAUDE.md  settings.json
dotfiles/.claude/agents/: comment-discipline.md
dotfiles/.claude/themes/: catppuccin-macchiato.json
dotfiles/.config/: hyfetch.json
dotfiles/.config/alacritty/: alacritty.toml  alacritty.yml
dotfiles/.config/bat/: config
dotfiles/.config/ccstatusline/: settings.json
dotfiles/.config/fusuma/: config.yml
dotfiles/.config/fuzzel/: fuzzel.ini
dotfiles/.config/gallery-dl/: config.json
dotfiles/.config/ghostty/: config
dotfiles/.config/git/: ignore
dotfiles/.config/k9s/: config.yaml  views.yaml
dotfiles/.config/k9s/skins/: SOURCE
dotfiles/.config/linearmouse/: linearmouse.json
dotfiles/.config/mpv/scripts/: randjump.lua  streamcache.lua
dotfiles/.config/ncdu/: config
dotfiles/.config/niri/: config.kdl
dotfiles/.config/nvim/: init.lua  lazy-lock.json
dotfiles/.config/ptpython/: config.py
dotfiles/.config/swiftbar/: ccusage.30s.sh
dotfiles/.config/systemd/user/: aria2cd.service  git-sync.service  git-sync.timer  rclone-copy.service  (+9 more)
dotfiles/.config/waybar/: ccusage.sh  config.jsonc  style.css
dotfiles/.config/yay/: config.json
dotfiles/.config/youtube-dl/: config
dotfiles/.config/yt-dlp/: config
dotfiles/.config/zed/: keymap.json  settings.json
dotfiles/.ssh/: authorized_keys  config  id_ed25519_sk.pub  id_ed25519_sk_2.pub
dotfiles/.xmonad/: xmonad.hs
git/: gerrit-download  gerrit-push  git-fixup  git-isclean
hooks/: post-upgrade
keyboard/: podvorak.keylayout
keyboard/xkb/: pc.xkb
keyboard/xkb/symbols/: us
machines/: common.nix  darwin-system.nix  darwin.nix  launchd-services.nix  librewolf-extension.nix  librewolf.nix  linux.nix  systemd-services.nix  uv-tools.nix
machines/hosts/: amygdalin.nix
machines/pkgs/: age-with-plugins.nix  browserpass-native-passage.nix  cc-kimi-splash.txt  cc-minimax-splash.txt  cc-openai-proxy.nix  cc-openai-splash.txt  cc-zai-splash.txt  ccstatusline.nix  claude-code-kimi.nix  claude-code-minimax.nix  claude-code-openai.nix  claude-code-variant.nix  claude-code-zai.nix  claude-code.nix  delta-realpath.nix  entire.nix  kimi-teal-theme.json  minimax-nebula-theme.json  niri-spacer.nix  openai-slate-theme.json  secretive.nix  secwrap.nix  zai-carbon-theme.json
meta/: check-update  git-verify-fast-forward  run-update
obsidian/: daily-note.js
overrides/yt-dlp/: ffmpeg
patches/host/amygdalin/: .i3status.conf.patch
patches/uname/Darwin/: .tmux.conf.patch
rust-utils/: .gitignore  README.md
rust-utils/niri-spacer/: Cargo.toml  DEVELOPMENT.md  README.md  clippy.toml  deny.toml  deny.toml.backup  lcov.info  rustfmt.toml
rust-utils/niri-spacer/.cargo/: config.toml
rust-utils/niri-spacer/.github/workflows/: ci.yml
rust-utils/niri-spacer/benches/: window_creation.rs
rust-utils/niri-spacer/src/: error.rs  lib.rs  main.rs  niri.rs  session.rs  signal.rs  window.rs  workspace.rs
rust-utils/niri-spacer/src/native/: mod.rs  surface.rs  wayland.rs  window.rs
rust-utils/niri-spacer/tests/: cli_tests.rs  integration_tests.rs  property_tests.rs
shims/: gradle-shim
src/cc-openai-proxy/: package-lock.json  package.json
src/cc-openai-proxy/test/: auth.test.js  convert.test.js
src/librewolf-workspace-tracker/: README.md  background.js  manifest.json  native-messaging.js  restoration.js
src/wlrenv/: retainer.py  secwrap.py
src/wlrenv/ccpatch/: __init__.py  bunfmt.py  cli.py  container.py  elf.py  macho.py  patches.py
src/wlrenv/niri/: __init__.py  cli.py  config.py  identify.py  ipc.py  librewolf.py  librewolf_host.py  order_storage.py  ordering.py  positions.py  restore.py  storage.py  track.py
ssh/: moshen
tests/: test_retainer.py  test_secwrap.py
tests/ccpatch/: test_bunfmt.py  test_elf_integration.py  test_patches.py  test_patches_catalog.py
tests/niri/: test_cli.py  test_config.py  test_identify.py  test_ipc.py  test_librewolf.py  test_librewolf_host.py  test_order_storage.py  test_ordering.py  test_positions.py  test_restore.py  test_storage.py  test_track.py
xontrib/: wlrenv.xsh  wlrutils.xsh
xorg/: xsession.sh
(+16 files in other folders)
