[project]
name = "wlrenv"
description = ""
authors = [
    {name = "Luc Ritchie", email = "luc.ritchie@gmail.com"},
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "annotated-types>=0.7.0,<0.8.0",
    "anyio>=4.8.0,<5.0.0",
    "catppuccin>=2.3.4,<3.0.0",
    "certifi>=2024.12.14",
    "hyfetch>=2.0.0,<3.0.0",
    "jedi>=0.19.2,<0.20.0",
    "numpy>=2.2.3,<3.0.0",
    "openai>=1.63.0,<2.0.0",
    "prompt-toolkit>=3.0.50,<4.0.0",
    "pygments>=2.19.1,<3.0.0",
    "pytimeparse>=1.1.8,<2.0.0",
    "scikit-image>=0.25.1,<0.26.0",
    "scipy>=1.15.1,<2.0.0",
    "tiktoken>=0.12.0,<0.13.0",
    "tqdm>=4.67.1,<5.0.0",
    "xonsh[full]>=0.19.2,<0.20.0",
    "xontrib-argcomplete>=0.3.4,<0.4.0",
    "xontrib-avox-poetry>=0.3.3,<0.4.0",
    "xontrib-fzf-widgets>=0.0.4,<0.0.5",
    "xontrib-jedi>=0.1.1,<0.2.0",
    "xontrib-pipeliner>=0.5.0,<0.6.0",
    "xontrib-clp>=0.1.7,<0.2.0",
    "xontrib-vox>=0.0.1,<0.0.2",
    "xontrib-whole-word-jumping>=0.0.1,<0.0.2",
    "xontrib-zoxide>=1.1.0,<2.0.0",
]
dynamic = ["version"]

[project.scripts]
xonsh = 'xonsh.main:main'

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch]
version.source = "vcs"
metadata.allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
    "src/wlrenv",
]

[tool.mypy]
disallow_untyped_defs = true
explicit_package_bases = true
ignore_missing_imports = true
enable_error_code = [
    "truthy-bool",  # catch mistakes like "if f.exists()" instead of "if await f.exists()"
]

[tool.pyright]
pythonVersion = "3.12"
reportImplicitOverride = true

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
ignore = ["E402", "E501", "C901", "S101"]
select = [
    "B",
    "C",
    "E",
    "F",
    "I",
    "N",
    "S",
    "W",
    "ANN",
    "ASYNC",
    "UP",
    "RUF100",  # unused noqa
    "T201",  # print statements
]

[dependency-groups]
dev = [
    "mypy>=1.15.0,<2.0.0",
    "pre-commit>=4.1.0,<5.0.0",
    "pyright>=1.1.393,<2.0.0",
    "ruff>=0.9.6,<0.10.0",
    "types-tqdm",
    "yamllint>=1.35.1,<2.0.0",
]
